# mcp-server-insta-analytics

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.dynamodb  README.md  compose.dynamodb.yaml  compose.yaml  deploy.sh  pyproject.toml  template.yaml
docs/: instaloader-rate-limit-guide.md
src/mcp_insta_analytics/: __init__.py  __main__.py  auth_middleware.py  cache.py  config.py  dynamodb_cache.py  dynamodb_rate_limiter.py  errors.py  lambda_handler.py  models.py  rate_limiter.py  server.py
src/mcp_insta_analytics/analysis/: __init__.py  metrics.py  sentiment.py  timeseries.py
src/mcp_insta_analytics/fetcher/: __init__.py  base.py  factory.py  instaloader_fetcher.py
src/mcp_insta_analytics/tools/: __init__.py  comments.py  post_metrics.py  search.py  user_analytics.py
tests/: conftest.py  test_cache.py  test_dynamodb_cache.py  test_dynamodb_rate_limiter.py  test_mcp_client.py  test_rate_limiter.py
tests/fixtures/: sample_comments.json  sample_post.json  sample_user.json
tests/test_analysis/: test_metrics.py  test_sentiment.py  test_timeseries.py
tests/test_fetcher/: test_factory.py  test_instaloader_mapping.py
tests/test_tools/: test_comments.py  test_post_metrics.py  test_search.py  test_user_analytics.py
