[project]
name = "mcp-server-insta-analytics"
version = "0.1.0"
description = "MCP server for Instagram analytics - read-only analysis via instaloader"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "instaloader>=4.15",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "vaderSentiment>=3.3",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20"]
docker = ["aiosqlite>=0.20", "uvicorn>=0.30"]
lambda = ["mangum>=0.19", "boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "pyright>=1.1",
    "aiosqlite>=0.20",
    "uvicorn>=0.30",
    "boto3>=1.34",
    "mangum>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_insta_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100
